--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Base application theme. -->
+    <style name="Base.Theme.Calculadora" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 
-    <style name="Theme.Calculadora" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Calculadora" parent="Base.Theme.Calculadora" />
+    <style name="NumberButtom">
+        <item name="android:background">@color/gris</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+    <style name="SymbolButton">
+        <item name="android:background">@color/gris</item>
+        <item name="android:textColor">@color/azul</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+    <style name="Separator">
+        <item name="android:background">@color/azul</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:elevation">9dp</item>
+    </style>
 </resources>
