--- a/app/src/main/res/layout/activity_mainland.xml
+++ b/app/src/main/res/layout/activity_mainland.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHor1"
         android:layout_width="wrap_content"
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.9"
+        app:layout_constraintGuide_percent="0.8"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHor3"
@@ -29,7 +28,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintGuide_percent="0.6"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHor4"
@@ -37,7 +36,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.7"
+        app:layout_constraintGuide_percent="0.4"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHor5"
@@ -45,7 +44,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.6"
+        app:layout_constraintGuide_percent="0.2"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHor6"
@@ -53,7 +52,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintGuide_percent="0"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gVer1"
@@ -69,7 +68,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.25"
+        app:layout_constraintGuide_percent="0.2"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gVer3"
@@ -77,7 +76,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintGuide_percent="0.4"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gVer4"
@@ -85,7 +84,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.75"
+        app:layout_constraintGuide_percent="0.6"
         app:layout_constraintStart_toStartOf="parent" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gVer5"
@@ -93,9 +92,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintStart_toStartOf="parent" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gVer6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintGuide_percent="1"
         app:layout_constraintStart_toStartOf="parent" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn0"
         style="@style/NumberButtom"
@@ -103,22 +109,19 @@
         android:layout_height="0dp"
         android:text="@string/boton0"
         app:layout_constraintBottom_toTopOf="@+id/gHor1"
-        app:layout_constraintEnd_toStartOf="@id/gVer3"
+        app:layout_constraintEnd_toStartOf="@id/gVer4"
         app:layout_constraintStart_toEndOf="@id/gVer1"
         app:layout_constraintTop_toBottomOf="@+id/gHor2" />
-
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnComa"
-        style="@style/NumberButtom"
+        style="@style/SymbolButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/botonComa"
         app:layout_constraintBottom_toTopOf="@+id/gHor1"
-        app:layout_constraintEnd_toStartOf="@id/gVer4"
-        app:layout_constraintStart_toEndOf="@id/gVer3"
+        app:layout_constraintEnd_toStartOf="@id/gVer5"
+        app:layout_constraintStart_toEndOf="@id/gVer4"
         app:layout_constraintTop_toBottomOf="@+id/gHor2" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnIgual"
         style="@style/SymbolButton"
@@ -126,10 +129,9 @@
         android:layout_height="0dp"
         android:text="@string/botonIgual"
         app:layout_constraintBottom_toTopOf="@+id/gHor1"
-        app:layout_constraintEnd_toStartOf="@id/gVer5"
-        app:layout_constraintStart_toEndOf="@id/gVer4"
+        app:layout_constraintEnd_toStartOf="@id/gVer6"
+        app:layout_constraintStart_toEndOf="@id/gVer5"
         app:layout_constraintTop_toBottomOf="@+id/gHor2" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn1"
         style="@style/NumberButtom"
@@ -139,8 +141,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor2"
         app:layout_constraintEnd_toStartOf="@id/gVer2"
         app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintTop_toBottomOf="@+id/gHor3"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor3" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn2"
         style="@style/NumberButtom"
@@ -150,8 +151,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor2"
         app:layout_constraintEnd_toStartOf="@id/gVer3"
         app:layout_constraintStart_toEndOf="@id/gVer2"
-        app:layout_constraintTop_toBottomOf="@+id/gHor3"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor3" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn3"
         style="@style/NumberButtom"
@@ -161,19 +161,17 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor2"
         app:layout_constraintEnd_toStartOf="@id/gVer4"
         app:layout_constraintStart_toEndOf="@id/gVer3"
-        app:layout_constraintTop_toBottomOf="@+id/gHor3"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor3" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSumar"
         style="@style/SymbolButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/botonMas"
-        app:layout_constraintBottom_toTopOf="@+id/gHor2"
+        app:layout_constraintBottom_toTopOf="@+id/gHor3"
         app:layout_constraintEnd_toStartOf="@id/gVer5"
         app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintTop_toBottomOf="@+id/gHor3"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor4" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn4"
         style="@style/NumberButtom"
@@ -183,8 +181,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor3"
         app:layout_constraintEnd_toStartOf="@id/gVer2"
         app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintTop_toBottomOf="@+id/gHor4"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor4" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn5"
         style="@style/NumberButtom"
@@ -194,8 +191,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor3"
         app:layout_constraintEnd_toStartOf="@id/gVer3"
         app:layout_constraintStart_toEndOf="@id/gVer2"
-        app:layout_constraintTop_toBottomOf="@+id/gHor4"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor4" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn6"
         style="@style/NumberButtom"
@@ -205,8 +201,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor3"
         app:layout_constraintEnd_toStartOf="@id/gVer4"
         app:layout_constraintStart_toEndOf="@id/gVer3"
-        app:layout_constraintTop_toBottomOf="@+id/gHor4"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor4" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMenos"
         style="@style/SymbolButton"
@@ -214,10 +209,9 @@
         android:layout_height="0dp"
         android:text="@string/botonMenos"
         app:layout_constraintBottom_toTopOf="@+id/gHor3"
-        app:layout_constraintEnd_toStartOf="@id/gVer5"
-        app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintTop_toBottomOf="@+id/gHor4"/>
-
+        app:layout_constraintEnd_toStartOf="@id/gVer6"
+        app:layout_constraintStart_toEndOf="@id/gVer5"
+        app:layout_constraintTop_toBottomOf="@+id/gHor4" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn7"
         style="@style/NumberButtom"
@@ -227,8 +221,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
         app:layout_constraintEnd_toStartOf="@id/gVer2"
         app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintTop_toBottomOf="@+id/gHor5"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor5" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn8"
         style="@style/NumberButtom"
@@ -238,8 +231,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
         app:layout_constraintEnd_toStartOf="@id/gVer3"
         app:layout_constraintStart_toEndOf="@id/gVer2"
-        app:layout_constraintTop_toBottomOf="@+id/gHor5"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor5" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn9"
         style="@style/NumberButtom"
@@ -249,41 +241,37 @@
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
         app:layout_constraintEnd_toStartOf="@id/gVer4"
         app:layout_constraintStart_toEndOf="@id/gVer3"
-        app:layout_constraintTop_toBottomOf="@+id/gHor5"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor5" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMul"
         style="@style/SymbolButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/botonPor"
-        app:layout_constraintBottom_toTopOf="@+id/gHor4"
+        app:layout_constraintBottom_toTopOf="@+id/gHor2"
         app:layout_constraintEnd_toStartOf="@id/gVer5"
         app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintTop_toBottomOf="@+id/gHor5"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor3" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnBorrar"
-        style="@style/NumberButtom"
+        style="@style/SymbolButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/botonLimpiar"
-        app:layout_constraintBottom_toTopOf="@+id/gHor5"
-        app:layout_constraintEnd_toStartOf="@id/gVer4"
-        app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintTop_toBottomOf="@+id/gHor6"/>
-
+        app:layout_constraintBottom_toTopOf="@+id/gHor4"
+        app:layout_constraintEnd_toStartOf="@id/gVer6"
+        app:layout_constraintStart_toEndOf="@id/gVer4"
+        app:layout_constraintTop_toBottomOf="@+id/gHor5" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDiv"
         style="@style/SymbolButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/botonDividir"
-        app:layout_constraintBottom_toTopOf="@+id/gHor5"
-        app:layout_constraintEnd_toStartOf="@id/gVer5"
-        app:layout_constraintStart_toEndOf="@id/gVer4"
-        app:layout_constraintTop_toBottomOf="@+id/gHor6"/>
-
+        app:layout_constraintBottom_toTopOf="@+id/gHor2"
+        app:layout_constraintEnd_toStartOf="@id/gVer6"
+        app:layout_constraintStart_toEndOf="@id/gVer5"
+        app:layout_constraintTop_toBottomOf="@+id/gHor3" />
     <View
         android:id="@+id/separator"
         style="@style/Separator"
@@ -292,8 +280,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/gHor1"
         app:layout_constraintEnd_toEndOf="@id/gVer4"
         app:layout_constraintStart_toStartOf="@id/gVer4"
-        app:layout_constraintTop_toTopOf="@+id/gHor6" />
-
+        app:layout_constraintTop_toTopOf="@+id/gHor5" />
     <TextView
         android:id="@+id/screen"
         style="@style/ScreenNumber"
@@ -304,8 +291,7 @@
         android:text="@string/boton0"
         android:gravity="center|end"
         app:layout_constraintBottom_toTopOf="@+id/gHor6"
-        app:layout_constraintEnd_toStartOf="@id/gVer5"
+        app:layout_constraintEnd_toStartOf="@id/gVer6"
         app:layout_constraintStart_toEndOf="@id/gVer1"
-        app:layout_constraintTop_toBottomOf="@+id/gHor7" />
-
+        app:layout_constraintTop_toBottomOf="@+id/gHor6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
