--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,8 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:elevation">9dp</item>
     </style>
+    <style name="ScreenNumber">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">48sp</item>
+    </style>
 </resources>
